--- a/RustScape2D.vcxproj
+++ b/RustScape2D.vcxproj
@@ -70,12 +70,20 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>D:\OLD DRIVES\OLD CODING\Coding\C++\SDL\SDL2_image-2.0.4\include;D:\OLD DRIVES\OLD CODING\Coding\C++\SDL\SDL2-2.0.9\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\OLD DRIVES\OLD CODING\Coding\C++\SDL\SDL2-2.0.9\lib\x86;D:\OLD DRIVES\OLD CODING\Coding\C++\SDL\SDL2_image-2.0.4\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\SDL\SDL2_image-2.0.4\include;D:\SDL\SDL2-2.28.5\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\SDL\SDL2_image-2.0.4\lib\x64;D:\SDL\SDL2-2.28.5\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>E:\Coding\C++\SDL\SDL2_image-2.0.3\include;E:\Coding\C++\SDL\SDL2-2.0.8\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\Coding\C++\SDL\SDL2_image-2.0.3\lib\x86;E:\Coding\C++\SDL\SDL2-2.0.8\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\SDL\SDL2_image-2.0.4\include;D:\SDL\SDL2-2.28.5\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\SDL\SDL2_image-2.0.4\lib\x64;D:\SDL\SDL2-2.28.5\lib\x64;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>D:\SDL\SDL2_image-2.0.4\include;D:\SDL\SDL2-2.28.5\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\SDL\SDL2_image-2.0.4\lib\x64;D:\SDL\SDL2-2.28.5\lib\x64;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>D:\SDL\SDL2_image-2.0.4\include;D:\SDL\SDL2-2.28.5\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\SDL\SDL2_image-2.0.4\lib\x64;D:\SDL\SDL2-2.28.5\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -85,8 +93,10 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
+      <EntryPointSymbol>
+      </EntryPointSymbol>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -96,6 +106,12 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
+    <Link>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib</AdditionalDependencies>
+      <SubSystem>Console</SubSystem>
+      <EntryPointSymbol>
+      </EntryPointSymbol>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -109,8 +125,10 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <SubSystem>Console</SubSystem>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib</AdditionalDependencies>
+      <SubSystem>Windows</SubSystem>
+      <EntryPointSymbol>
+      </EntryPointSymbol>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -125,6 +143,10 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib</AdditionalDependencies>
+      <SubSystem>Windows</SubSystem>
+      <EntryPointSymbol>
+      </EntryPointSymbol>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
