--- a/RustScape2D.vcxproj
+++ b/RustScape2D.vcxproj
@@ -70,20 +70,20 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>D:\SDL\SDL2_image-2.0.4\include;D:\SDL\SDL2-2.28.5\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\SDL\SDL2_image-2.0.4\lib\x64;D:\SDL\SDL2-2.28.5\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>packages\sdl2_image.nuget.2.8.2\build\native\include;packages\sdl2.nuget.2.30.0\build\native\include;$(IncludePath)</IncludePath>
+    <LibraryPath>packages\sdl2.nuget.2.30.0\build\native\lib\x64;packages\sdl2_image.nuget.2.8.2\build\native\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>D:\SDL\SDL2_image-2.0.4\include;D:\SDL\SDL2-2.28.5\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\SDL\SDL2_image-2.0.4\lib\x64;D:\SDL\SDL2-2.28.5\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>packages\sdl2_image.nuget.2.8.2\build\native\include;packages\sdl2.nuget.2.30.0\build\native\include;$(IncludePath)</IncludePath>
+    <LibraryPath>packages\sdl2.nuget.2.30.0\build\native\lib\x64;packages\sdl2_image.nuget.2.8.2\build\native\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>D:\SDL\SDL2_image-2.0.4\include;D:\SDL\SDL2-2.28.5\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\SDL\SDL2_image-2.0.4\lib\x64;D:\SDL\SDL2-2.28.5\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>packages\sdl2_image.nuget.2.8.2\build\native\include;packages\sdl2.nuget.2.30.0\build\native\include;$(IncludePath)</IncludePath>
+    <LibraryPath>packages\sdl2.nuget.2.30.0\build\native\lib\x64;packages\sdl2_image.nuget.2.8.2\build\native\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>D:\SDL\SDL2_image-2.0.4\include;D:\SDL\SDL2-2.28.5\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\SDL\SDL2_image-2.0.4\lib\x64;D:\SDL\SDL2-2.28.5\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>packages\sdl2_image.nuget.2.8.2\build\native\include;packages\sdl2.nuget.2.30.0\build\native\include;$(IncludePath)</IncludePath>
+    <LibraryPath>packages\sdl2.nuget.2.30.0\build\native\lib\x64;packages\sdl2_image.nuget.2.8.2\build\native\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
